# runa

./: .gitignore  CMakeLists.txt  README.md
headers/: face.h  filecreator.h  halfedge.h  model.h  vertex.h
models/bones/: zygoma arcus links_original.stl  zygoma onder links_original.stl  zygoma revchts_original.stl
src/: face.cpp  filecreator.cpp  halfedge.cpp  main.cpp  model.cpp  vertex.cpp
